tests/NormalTests/paczka1/fuzzy1/10230842.err
Error in line 9: xuHp A375 -2,3
Error in line 1: BkF4hNDbG S694 96,8
Error in line 14: DKGyBZI18u S694 52,6
Error in line 11: Zmkt9 A375 74,8
Error in line 5: xuHp A375 55,4
Error in line 19: Zmkt9 S694 79,0
Error in line 22: xuHp A553 99,7
Error in line 21: DKGyBZI18u S742 112,4
Error in line 28: yZ5gHLZd S742 83,4
